
2016-11-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at: splitted tests for CBL_GC_FORK /
	  CBL_GC_WAITPID, skip these tests if the functions return "not available"

2016-11-17  Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_extensions.at: Add CBL_GC_FORK & CBL_GC_WAITPID

2016-11-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_win: added COB_IS_RUNNING_IN_TESTMODE

2016-11-11  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed for new spacing.

2016-11-09  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added cross reference tests.

2016-11-07  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added 88 values to printed symbol listing.

2016-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh, testsuite.src/listing.at: adjustment for new maximum
	  of 14 digits in version string
	* testsuite.src/listing.at: capture original listing, instead of unified one

2016-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: moved from testsuite.src/listings-sed.sh
	* listings-sed.sh: adjustment for exotic shells
	* atlocal.in, atlocal_win: adjusted listings-sed.sh path in UNIFY_LISTING
	* Makefile.am: added listings-sed.sh to EXTRA_DIST

2016-11-01  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed preprocessed compile for new line
	  number processing and added an error preprocessed test case.

2016-10-31  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added header/trailer to file not found 
	  test case.

2016-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/Makefile.am, cobol85/report.pl: added support for make with
	  multiple jobs (only done when building the test directories)

2016-10-29  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings-sed.sh: Fixed for generic 9 character version.