@@ -1,4 +1,11 @@
 
+2016-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* atlocal_valgrind: sample configuration for running testsuites
+	  with valgrind
+	* cobol85/report.pl: check environment for COBC/COBCRUN to override
+	  the called binaries (useful for testing with valgrind)
+
 2016-11-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* testsuite.src/run_extensions.at: splitted tests for CBL_GC_FORK /
